<resources>

    <!-- Main Page -->
    <string name="app_name">MoodNooz</string>
    <string name="mood">Mood</string>
    <string name="nooz">Nooz&#160;</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MoodNooz</string>
    <string name="hint_search">Search</string>
    <string name="filter_by_date">Filter Result</string>
    <string name="today">today</string>
    <string name="this_week">this week</string>
    <string name="this_month">this month</string>
    <string name="this_year">this year</string>
    <string name="none">none</string>
    <string name="ok">OK</string>
    <string name="tips">Tips</string>
    <string name="tip1">* Queries should be typed in the format "word (symbol)word.." </string>
    <string name="tip2">* Symbols are used to modify mood, + for positive, - for negative and ? for a general expansion.</string>
    <string name="tip3">* Words with an added symbol are scored based on the terms related to both the word and the smybol.</string>
    <string name="got_it">Got it!</string>

    <!-- Search Result Page -->
    <string name="summary">Summary</string>
    <string name="suggestion">Please revise your query and try again.</string>
    <string name="search_error">Oops! An error occurred.</string>
    <string name="no_result">Oops! No matching result.</string>
    <string name="back">Back</string>

    <!-- Body Text Page -->
    <string name="tweet_this"><u>Tweet this</u></string>
    <string name="tweet_msg">I just read an article on MoodNooz. Check this out - </string>
    <string name="twitter_not_found">Oops! Twitter is not found on your phone.</string>
    <string name="load_body_fail_msg">Content currently not available. It may contain purly video or images.</string>

</resources>