<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.moodnooz.ui.MoodNoozTextViewGosmick
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/btn_bg"
        android:gravity="center"
        android:text="@string/tips"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <com.moodnooz.ui.MoodNoozTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:text="@string/tip1"
            android:textColor="@color/btn_bg"
            android:textSize="17sp" />

        <com.moodnooz.ui.MoodNoozTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:text="@string/tip2"
            android:textColor="@color/btn_bg"
            android:textSize="17sp" />

        <com.moodnooz.ui.MoodNoozTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:text="@string/tip3"
            android:textColor="@color/btn_bg"
            android:textSize="17sp" />
    </LinearLayout>

    <com.moodnooz.ui.MoodNoozTextViewGosmick
        android:id="@+id/got_it"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@color/btn_bg"
        android:gravity="center"
        android:text="@string/got_it"
        android:textColor="@color/white"
        android:textSize="26sp" />

</LinearLayout>